--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,10 @@ body {
   margin: 0;
  /* background-color: var(--bg-dark); */
   height: 100vh;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   display: grid;
   grid-template-rows: auto 1fr auto; /* Header – Main – Footer */
-  overflow-x: hidden;
+  
   position: relative;
   
 }
@@ -75,7 +75,7 @@ img:hover {
 }
 
 .search-bar input {
-  width: 65%;
+  width: 60%;
   height: 26px;
   padding: 13px 20px 13px 45px;
   border: none;
@@ -112,7 +112,7 @@ img:hover {
   padding: 16px;
   color: white;
   overflow-y: auto;
-  
+  overflow-x: hidden;
 }
 
 .main-p {
@@ -399,4 +399,11 @@ img:hover {
 
 #Filter {
   display: none;
+}
+
+#close {
+  position: absolute;
+  margin: 20px;
+  top: 0;
+  left: 0;
 }
