--- a/styles.css
+++ b/styles.css
@@ -404,6 +404,12 @@ img:hover {
 #close {
   position: absolute;
   margin: 20px;
+  width: 50px;
+  height: 50px;
   top: 0;
   left: 0;
+  border-radius: 50%;
+  border: transparent;
+  background-color: #0d0e1a;
+  color: white;
 }
