--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ img:hover {
   height: 300px;
   background-size: contain;
   border-radius: 8%;
-  margin: 0 6px ;
+  margin-right: 15px;
   margin-bottom: 10px;
 }
 .top-rated {
